Removed most compilation WARNINGs with Java 17 in openxava