@@ -19,7 +19,7 @@ public class CounterByPassOidCalculator implements IAggregateOidCalculator {
 	}
 
 	public Object calculate() throws Exception { 
-		return new Integer(counter);		
+		return Integer.valueOf(counter);		
 	}
 
 }
